Fixed alignment

--- a/FrontEnd/agme-app/src/components/Admin/Business.css
+++ b/FrontEnd/agme-app/src/components/Admin/Business.css
@@ -14,4 +14,5 @@ textarea {
 
 .admin-pwd-title {
   font-style: italic;
+  font-size: 15px;
 }
